# QTInspector

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
.github/workflows/: cmake-multi-platform.yml
example/: CMakeLists.txt
example/appqml/: CMakeLists.txt  Main.qml  main.cpp  resource.qrc
example/appwidget/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  dialog2.cpp  dialog2.ui  main.cpp
example/felgo/: CMakeLists.txt  main.cpp
example/felgo/android/: AndroidManifest.xml
example/felgo/android/res/values/: strings.xml
example/felgo/ios/: Project-Info.plist
example/felgo/qml/: Main.qml  config.json
server/: CMakeLists.txt  client_selector.cc  client_selector.h  client_selector.ui  dialog.cpp  dialog.h  dialog.ui  float_cover_mask.cc  float_cover_mask.h  float_cover_mask.ui  icons.qrc  main.cpp  object_method_widget.cpp  object_method_widget.h  object_node_model.cc  object_node_model.h  object_property_widget.cpp  object_property_widget.h  objectmethodwidget.ui  objectpropertywidget.ui  resource_manager_dlg.cpp  resource_manager_dlg.h  resource_manager_dlg.ui  resource_node_model.cpp  resource_node_model.h  show_uri_content.cpp  show_uri_content.h  show_uri_content.ui  show_uricontent_dlg.cpp  show_uricontent_dlg.h  show_uricontent_dlg.ui  tree_view_base_model.h
source/: CMakeLists.txt  meta_object_detail.cc  meta_object_detail.h  qt_inspector_manager.cc  qt_inspector_manager.h  qt_inspector_manager_impl.cc  qt_inspector_manager_impl.h  qt_object_node.cc  qt_object_node.h  qt_window_node.cc  qt_window_node.h
source/3rd/: CMakeLists.txt
source/3rd/protobuf/: CMakeLists.txt  extract_includes.bat
source/3rd/protobuf/src/google/protobuf/: parse_context.h
source/network/: packet_util.cc  packet_util.h  tcp_client_impl.cc  tcp_client_impl.h  tcp_server_impl.cc  tcp_server_impl.h
source/pb/: app_window.proto
source/util/: qobject_helper.cc  qobject_helper.h
